# Pico_ePaper_Code

./: README.md  Version_CN.txt  Version_EN.txt
c/: CMakeLists.txt  ReadmeCN.txt  ReadmeEN.txt  main.c
c/examples/: CMakeLists.txt  EPD_2in13_V2_test.c  EPD_2in13_V3_test.c  EPD_2in13_V4_test.c  EPD_2in13b_V3_test.c  EPD_2in13b_V4_test.c  EPD_2in13bc_test.c  EPD_2in13d_test.c  EPD_2in66_test.c  EPD_2in66b_test.c  EPD_2in7_V2_test.c  EPD_2in7_test.c  EPD_2in9_V2_test.c  EPD_2in9b_V3_test.c  EPD_2in9b_V4_test.c  EPD_2in9bc_test.c  EPD_2in9d_test.c  EPD_3in7_test.c  EPD_4in2_V2_test.c  EPD_4in2_test.c  EPD_4in2b_V2_test.c  EPD_4in2b_V2_test_old.c  EPD_5in65f_test.c  EPD_5in83_V2_test.c  EPD_5in83b_V2_test.c  EPD_7in5_V2_test.c  EPD_7in5_V2_test_old.c  EPD_7in5b_V2_test.c  EPD_7in5b_V2_test_old.c  EPD_Test.h  ImageData.c  ImageData.h
c/extra_uf2/: Readme.txt
c/extra_uf2/2.13/: epd-V3.uf2  epd.uf2
c/extra_uf2/2.13-B/: epd-V4.uf2  epd.uf2
c/extra_uf2/2.13-C/: epd.uf2
c/extra_uf2/2.13-D/: epd.uf2
c/extra_uf2/2.66/: epd.uf2
c/extra_uf2/2.66-B/: epd.uf2
c/extra_uf2/2.7/: epd-V2.uf2  epd.uf2
c/extra_uf2/2.9/: epd.uf2
c/extra_uf2/2.9-B/: epd.uf2
c/extra_uf2/2.9-C/: epd.uf2
c/extra_uf2/2.9-D/: epd.uf2
c/extra_uf2/3.7/: epd.uf2
c/extra_uf2/4.2/: 4in2_V2.uf2  epd.uf2
c/extra_uf2/4.2-B/: epd.uf2
c/extra_uf2/5.65/: epd.uf2
c/extra_uf2/5.83/: epd.uf2
c/extra_uf2/5.83-B/: epd.uf2
c/extra_uf2/7.5/: epd.uf2
c/extra_uf2/7.5-B/: epd.uf2
c/lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
c/lib/Fonts/: CMakeLists.txt  font24CN.c
(+119 files in other folders)
